# gof_design_patterns_in_cpp-master

./: CMakeLists.txt  README.md
clasic_oop/: circle.h  main.cpp  main.h  shape.h  square.cpp  square.h
command_pattern/: CMakeLists.txt  circle.cpp  circle.h  command.h  main.cpp  square.h
cyclic_visitor_pattern/: CMakeLists.txt  circle.h  circle_draw.cpp  drawer.h  main.cpp  shape.h  shape_visitor.h  square.h  square_draw.cpp
extensive_hierarchy/: main.cpp
extensive_hierarchy/app/: circle_draw.cpp  openGL_master.h  square_draw.cpp
extensive_hierarchy/service/: CMakeLists.txt  circle.h  shape.h  square.h
observer_pattern/: main.cpp
observer_pattern/app/: CMakeLists.txt  circle_draw.cpp  square_draw.cpp
observer_pattern/service/: circle.h  observer.h  point.h  square.h
strategy_pattern/: main.cpp
strategy_pattern/app/: circle_draw.cpp  openGL_master.h  square_draw.cpp
strategy_pattern/service/: circle.h  square.h  strategy.h
strategy_pattern_with_std_function/: CMakeLists.txt  main.cpp
strategy_pattern_with_std_function/app/: circle_draw.cpp  openGL_master.h  square_draw.cpp
strategy_pattern_with_std_function/service/: circle.h  square.h
variant_visitor_pattern/: circle.h  circle_draw.cpp  drawer.h  main.cpp  square.h  square_draw.cpp
