# 
# ALI SAHBAZ
#
# 
# MY DESIGN PATTERNS WORKSHOP 
#
# Date          : 17.02.2024
# By            : Ali Şahbaz
# e-mail        : ali_sahbaz@outlook.com 
#
 
cmake_minimum_required(VERSION 3.8 FATAL_ERROR)

project(ASOS_DESIGNER CXX)

set(CMAKE_CXX_STANDARD 20)


# clasic_oop , cyclic_visitor_pattern , variant_visitor_pattern , extensive_hierarchy , strategy_pattern , command_pattern , strategy_pattern_with_std_function
add_subdirectory(observer_pattern)
 